# HuffmanTree

./: .gitignore  CMakeLists.txt  README.md
include/: binary_reader.h  binary_writer.h  huffman.h  minheap.h  minheap.tpp  padder.h
src/: binary_reader.cpp  binary_writer.cpp  huffman.cpp  main.cpp  padder.cpp  test_priority.cpp
tests/: test_binary_reader.cpp  test_binary_writer.cpp  test_huffman.cpp
